[gd_scene load_steps=4 format=2]

[ext_resource path="res://BaseCard.tscn" type="PackedScene" id=1]
[ext_resource path="res://PlayerSelf.gd" type="Script" id=2]
[ext_resource path="res://PlayerSelfCard.tscn" type="PackedScene" id=3]

[node name="PlayerSelf" type="Control"]
margin_right = 900.0
margin_bottom = 150.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Card1" parent="." groups=["PlayerSelfCards"] instance=ExtResource( 3 )]
position = Vector2( 97.5, 81.5 )
scale = Vector2( 3, 3 )

[node name="Card2" parent="." groups=["PlayerSelfCards"] instance=ExtResource( 3 )]
position = Vector2( 249.5, 81.5 )
scale = Vector2( 3, 3 )

[node name="Card3" parent="." groups=["PlayerSelfCards"] instance=ExtResource( 3 )]
position = Vector2( 393.5, 81.5 )
scale = Vector2( 3, 3 )

[node name="Card4" parent="." groups=["PlayerSelfCards"] instance=ExtResource( 3 )]
position = Vector2( 545.5, 81.5 )
scale = Vector2( 3, 3 )

[node name="Card5" parent="." groups=["PlayerSelfCards"] instance=ExtResource( 3 )]
position = Vector2( 689.5, 81.5 )
scale = Vector2( 3, 3 )

[node name="PlayerSelfPile" parent="." instance=ExtResource( 1 )]
position = Vector2( 832, 83.5 )
scale = Vector2( 2.92424, 3.02222 )
region_rect = Rect2( 1, 48, 33, 45 )
